@@ -185,7 +185,7 @@ public class WarrantPreferences  {
             String name = list.get(i).getName();
             Float speed = Float.valueOf(0f);
             try {
-                speed = new Float(list.get(i).getText());
+                speed = Float.valueOf(list.get(i).getText());
             } catch (NumberFormatException nfe) {
                 log.error(SpeedNamePrefs+" has invalid content for "+name+" = "+list.get(i).getText());
             }
